#pkgdata_DATA = barcodes/*/*.tsv

pkgbarcodesdir = $(pkgdatadir)/barcodes
pkgbarcodesi7datadir = $(pkgbarcodesdir)/i7
pkgbarcodesi5datadir = $(pkgbarcodesdir)/i5
pkgbarcodesi5rcdatadir = $(pkgbarcodesdir)/i5_rc
pkgbarcodesi1datadir = $(pkgbarcodesdir)/i1


pkgbarcodesi7data_DATA = \
 barcodes/i7/base_mapping_b384_l10.tsv \
 barcodes/i7/base_mapping_b96_l10.tsv \
 barcodes/i7/base_mapping_b96_l12.tsv \
 barcodes/i7/base_mapping_b96_l8.tsv \
 barcodes/i7/base_mapping_b384_l12.tsv

pkgbarcodesi5data_DATA = \
 barcodes/i5/base_mapping_b384_l10.tsv \
 barcodes/i5/base_mapping_b96_l10.tsv \
 barcodes/i5/base_mapping_b96_l12.tsv \
 barcodes/i5/base_mapping_b96_l8.tsv \
 barcodes/i5/base_mapping_b384_l12.tsv

pkgbarcodesi5rcdata_DATA = \
 barcodes/i5_rc/base_mapping_b96_l10.tsv \
 barcodes/i5_rc/base_mapping_b384_l12.tsv \
 barcodes/i5_rc/base_mapping_b384_l10.tsv \
 barcodes/i5_rc/base_mapping_b96_l8.tsv \
 barcodes/i5_rc/base_mapping_b96_l12.tsv

pkgbarcodesi1data_DATA = \
 barcodes/i1/base_mapping_b384_l10.tsv \
 barcodes/i1/base_mapping_b96_l10.tsv \
 barcodes/i1/base_mapping_b96_l12.tsv \
 barcodes/i1/base_mapping_b96_l8.tsv \
 barcodes/i1/base_mapping_b384_l12.tsv

EXTRA_DIST = $(pkgbarcodesi7data_DATA) $(pkgbarcodesi5data_DATA) $(pkgbarcodesi5rcdata_DATA) $(pkgbarcodesi1data_DATA)

