
#pkgdata_DATA = barcodes/*/*.tsv

pkgbarcodesdir = $(pkgdatadir)/barcodes
pkgbarcodesi7l8datadir = $(pkgbarcodesdir)/i7/l8
pkgbarcodesi7_rcl8datadir = $(pkgbarcodesdir)/i7_rc/l8
pkgbarcodesi5l8datadir = $(pkgbarcodesdir)/i5/l8
pkgbarcodesi5rcl8datadir = $(pkgbarcodesdir)/i5_rc/l8
pkgbarcodesi1l8datadir = $(pkgbarcodesdir)/i1/l8

pkgbarcodesi7l10datadir = $(pkgbarcodesdir)/i7/l10
pkgbarcodesi7_rcl10datadir = $(pkgbarcodesdir)/i7_rc/l10
pkgbarcodesi5l10datadir = $(pkgbarcodesdir)/i5/l10
pkgbarcodesi5rcl10datadir = $(pkgbarcodesdir)/i5_rc/l10
pkgbarcodesi1l10datadir = $(pkgbarcodesdir)/i1/l10

pkgbarcodesi7l12datadir = $(pkgbarcodesdir)/i7/l12
pkgbarcodesi7_rcl12datadir = $(pkgbarcodesdir)/i7_rc/l12
pkgbarcodesi5l12datadir = $(pkgbarcodesdir)/i5/l12
pkgbarcodesi5rcl12datadir = $(pkgbarcodesdir)/i5_rc/l12
pkgbarcodesi1l12datadir = $(pkgbarcodesdir)/i1/l12


pkgbarcodesi7l8data_DATA = \
 barcodes/i7/l8/base_mapping_b96_l8.tsv \
 barcodes/i7/l8/aviti_base_mapping_b96_l8.tsv

pkgbarcodesi7l10data_DATA = \
 barcodes/i7/l10/base_mapping_b384_l10.tsv \
 barcodes/i7/l10/base_mapping_b96_l10.tsv \
 barcodes/i7/l10/aviti_base_mapping_b384_l10.tsv \
 barcodes/i7/l10/aviti_base_mapping_b96_l10.tsv

pkgbarcodesi7l12data_DATA = \
 barcodes/i7/l12/base_mapping_b96_l12.tsv \
 barcodes/i7/l12/base_mapping_b384_l12.tsv \
 barcodes/i7/l12/aviti_base_mapping_b96_l12.tsv \
 barcodes/i7/l12/aviti_base_mapping_b384_l12.tsv


pkgbarcodesi7_rcl8data_DATA = \
 barcodes/i7_rc/l8/base_mapping_b96_l8.tsv \
 barcodes/i7_rc/l8/aviti_base_mapping_b96_l8.tsv

pkgbarcodesi7_rcl10data_DATA = \
 barcodes/i7_rc/l10/base_mapping_b384_l10.tsv \
 barcodes/i7_rc/l10/base_mapping_b96_l10.tsv \
 barcodes/i7_rc/l10/aviti_base_mapping_b384_l10.tsv \
 barcodes/i7_rc/l10/aviti_base_mapping_b96_l10.tsv

pkgbarcodesi7_rcl12data_DATA = \
 barcodes/i7_rc/l12/base_mapping_b96_l12.tsv \
 barcodes/i7_rc/l12/base_mapping_b384_l12.tsv \
 barcodes/i7_rc/l12/aviti_base_mapping_b96_l12.tsv \
 barcodes/i7_rc/l12/aviti_base_mapping_b384_l12.tsv


pkgbarcodesi5l8data_DATA = \
 barcodes/i5/l8/base_mapping_b96_l8.tsv \
 barcodes/i5/l8/aviti_base_mapping_b96_l8.tsv

pkgbarcodesi5l10data_DATA = \
 barcodes/i5/l10/base_mapping_b384_l10.tsv \
 barcodes/i5/l10/base_mapping_b96_l10.tsv \
 barcodes/i5/l10/aviti_base_mapping_b384_l10.tsv \
 barcodes/i5/l10/aviti_base_mapping_b96_l10.tsv

pkgbarcodesi5l12data_DATA = \
 barcodes/i5/l12/base_mapping_b96_l12.tsv \
 barcodes/i5/l12/base_mapping_b384_l12.tsv\
 barcodes/i5/l12/aviti_base_mapping_b96_l12.tsv \
 barcodes/i5/l12/aviti_base_mapping_b384_l12.tsv

pkgbarcodesi5rcl8data_DATA = \
 barcodes/i5_rc/l8/base_mapping_b96_l8.tsv \
 barcodes/i5_rc/l8/aviti_base_mapping_b96_l8.tsv

pkgbarcodesi5rcl10data_DATA = \
 barcodes/i5_rc/l10/base_mapping_b96_l10.tsv \
 barcodes/i5_rc/l10/base_mapping_b384_l10.tsv \
 barcodes/i5_rc/l10/aviti_base_mapping_b96_l10.tsv \
 barcodes/i5_rc/l10/aviti_base_mapping_b384_l10.tsv

pkgbarcodesi5rcl12data_DATA = \
 barcodes/i5_rc/l12/base_mapping_b384_l12.tsv \
 barcodes/i5_rc/l12/base_mapping_b96_l12.tsv \
 barcodes/i5_rc/l12/aviti_base_mapping_b384_l12.tsv \
 barcodes/i5_rc/l12/aviti_base_mapping_b96_l12.tsv


pkgbarcodesi1l8data_DATA = \
 barcodes/i1/l8/base_mapping_b96_l8.tsv

pkgbarcodesi1l10data_DATA = \
 barcodes/i1/l10/base_mapping_b384_l10.tsv \
 barcodes/i1/l10/base_mapping_b96_l10.tsv

pkgbarcodesi1l12data_DATA = \
 barcodes/i1/l12/base_mapping_b96_l12.tsv \
 barcodes/i1/l12/base_mapping_b384_l12.tsv

EXTRA_DIST = $(pkgbarcodesi7l8data_DATA) $(pkgbarcodesi7_rcl8data_DATA) $(pkgbarcodesi5l8data_DATA) $(pkgbarcodesi5rcl8data_DATA) $(pkgbarcodesi1l8data_DATA) \
$(pkgbarcodesi7l10data_DATA) $(pkgbarcodesi7_rcl10data_DATA) $(pkgbarcodesi5l10data_DATA) $(pkgbarcodesi5rcl10data_DATA) $(pkgbarcodesi1l10data_DATA) \
$(pkgbarcodesi7l12data_DATA) $(pkgbarcodesi7_rcl12data_DATA) $(pkgbarcodesi5l12data_DATA) $(pkgbarcodesi5rcl12data_DATA) $(pkgbarcodesi1l12data_DATA)

